// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconAddSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconAddSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M18 11h-5V6c0-.6-.4-1-1-1s-1 .4-1 1v5H6c-.6 0-1 .4-1 1s.4 1 1 1h5v5c0 .6.4 1 1 1s1-.4 1-1v-5h5c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconBookmarkActiveSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconBookmarkActiveSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 5.1c.1-1.6-1.1-2.9-2.7-3.1H7.6C6.1 2.1 4.9 3.5 5 5v16c0 .4.2.7.5.9.3.2.7.2 1 0l5.4-3.6 5.4 3.6c.2.1.4.2.6.2.2 0 .3 0 .5-.1.3-.2.5-.5.5-.9l.1-16z\\" />
    </svg>
  );
};
"
`;

exports[`IconBookmarkSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconBookmarkSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 5.1c.1-1.6-1.1-2.9-2.7-3.1H7.6C6.1 2.1 4.9 3.5 5 5v16c0 .4.2.7.5.9.3.2.7.2 1 0l5.4-3.6 5.4 3.6c.2.1.4.2.6.2.2 0 .3 0 .5-.1.3-.2.5-.5.5-.9l.1-16zm-2 14l-4.4-3c-.3-.2-.8-.2-1.1 0l-4.4 3L7 4.9c0-.4.3-.9.7-.9h8.5c.5 0 .8.5.8 1v14.1z\\" />
    </svg>
  );
};
"
`;

exports[`IconChevronSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconChevronSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20.7 7.3c-.4-.4-1-.4-1.4 0L12 14.6 4.7 7.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l8 8c.2.2.5.3.7.3s.5-.1.7-.3l8-8c.4-.4.4-1 0-1.4z\\" />
    </svg>
  );
};
"
`;

exports[`IconClearSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconClearSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4s-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4.2.2.4.3.7.3s.5-.1.7-.3l5.3-5.3 5.3 5.3c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4L13.4 12z\\" />
    </svg>
  );
};
"
`;

exports[`IconCompanySvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconCompanySvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M9 6h2v2H9zm4 0h2v2h-2zm-4 4h2v2H9zm4 0h2v2h-2zm-4 4h2v2H9zm4 0h2v2h-2z\\" />
      <path d=\\"M17 2.2V2c0-.6-.4-1-1-1H8c-.6 0-1 .4-1 1v.2C5.9 2.6 5 3.7 5 5v16c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V5c0-1.3-.9-2.4-2-2.8zM17 20h-3v-2h-4v2H7V5c0-.6.4-1 1-1h8c.6 0 1 .4 1 1v15z\\" />
    </svg>
  );
};
"
`;

exports[`IconComposeSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconComposeSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M22.3 1.9l-.2-.2C20.9.5 19 .5 17.9 1.7l-7.6 7.6c-.1.1-.2.3-.3.5l-1 4c-.1.3 0 .7.3.9.2.2.4.3.7.3h.2l4-1c.2 0 .3-.1.5-.3l7.6-7.6c.6-.6.9-1.3.9-2.1s-.3-1.6-.9-2.1zm-8.8 10.2l-2.1.5.5-2.1L17 5.4 18.6 7l-5.1 5.1zm7.4-7.4l-.9.9L18.4 4l.9-.9c.4-.4 1-.4 1.4 0l.2.2c.2.2.3.4.3.7s-.1.5-.3.7z\\" />
      <path d=\\"M20 11c-.6 0-1 .4-1 1v6c0 .6-.4 1-1 1H6c-.6 0-1-.4-1-1V6c0-.6.4-1 1-1h6c.6 0 1-.4 1-1s-.4-1-1-1H6C4.3 3 3 4.3 3 6v12c0 1.7 1.3 3 3 3h12c1.7 0 3-1.3 3-3v-6c0-.6-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconCopySvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconCopySvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 19 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M14 7H6c-1.7 0-3 1.3-3 3v8c0 1.7 1.3 3 3 3h8c1.7 0 3-1.3 3-3v-8c0-1.7-1.3-3-3-3zm1 11c0 .6-.4 1-1 1H6c-.6 0-1-.4-1-1v-8c0-.6.4-1 1-1h8c.6 0 1 .4 1 1v8z\\" />
      <path d=\\"M19 2h-8C9.3 2 8 3.3 8 5h2c0-.6.4-1 1-1h8c.6 0 1 .4 1 1v8c0 .6-.4 1-1 1v2c1.7 0 3-1.3 3-3V5c0-1.7-1.3-3-3-3z\\" />
    </svg>
  );
};
"
`;

exports[`IconCreditCardSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconCreditCardSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20 4H4C2.3 4 1 5.3 1 7v10c0 1.7 1.3 3 3 3h16c1.7 0 3-1.3 3-3V7c0-1.7-1.3-3-3-3zM3 7c0-.6.4-1 1-1h16c.6 0 1 .4 1 1v1H3V7zm18 10c0 .6-.4 1-1 1H4c-.6 0-1-.4-1-1v-7h18v7z\\" />
      <path d=\\"M6 16h4c.6 0 1-.4 1-1s-.4-1-1-1H6c-.6 0-1 .4-1 1s.4 1 1 1z\\" />
    </svg>
  );
};
"
`;

exports[`IconCriticalSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconCriticalSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9z\\" />
      <circle cx={12} cy={17} r={1} />
      <path d=\\"M12 14c.6 0 1-.4 1-1V8c0-.6-.4-1-1-1s-1 .4-1 1v5c0 .6.4 1 1 1z\\" />
    </svg>
  );
};
"
`;

exports[`IconDateSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconDateSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 4h-2V3c0-.6-.4-1-1-1s-1 .4-1 1v1H9V3c0-.6-.4-1-1-1s-1 .4-1 1v1H5C3.3 4 2 5.3 2 7v12c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3V7c0-1.7-1.3-3-3-3zM4 7c0-.6.4-1 1-1h2v1c0 .6.4 1 1 1s1-.4 1-1V6h6v1c0 .6.4 1 1 1s1-.4 1-1V6h2c.6 0 1 .4 1 1v3H4V7zm16 12c0 .6-.4 1-1 1H5c-.6 0-1-.4-1-1v-7h16v7z\\" />
    </svg>
  );
};
"
`;

exports[`IconDeleteSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconDeleteSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M10 17c.6 0 1-.4 1-1v-6c0-.6-.4-1-1-1s-1 .4-1 1v6c0 .6.4 1 1 1zm4 0c.6 0 1-.4 1-1v-6c0-.6-.4-1-1-1s-1 .4-1 1v6c0 .6.4 1 1 1z\\" />
      <path d=\\"M20 4h-4V3c0-1.1-.9-2-2-2h-4c-1.1 0-2 .9-2 2v1H4c-.6 0-1 .4-1 1s.4 1 1 1v13c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V6c.6 0 1-.4 1-1s-.4-1-1-1zM10 3h4v1h-4V3zm8 16c0 .6-.4 1-1 1H7c-.6 0-1-.4-1-1V6h12v13z\\" />
    </svg>
  );
};
"
`;

exports[`IconDocumentSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconDocumentSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19.5 6.7l-3.6-3.2-1.2-1.2c-.2-.2-.4-.3-.7-.3H5.8C4.8 2 4 3.1 4 4.5V20c-.1 1 .7 1.9 1.7 2H18c1 .1 1.9-.7 2-1.7V8c0-.5-.2-1-.5-1.3zM15 5.4L16.6 7H15V5.4zM7 20c-.6 0-1-.4-1-1V5c0-.6.4-1 1-1h6v4c0 .6.4 1 1 1h4v10c0 .6-.4 1-1 1H7z\\" />
      <path d=\\"M14 11H9c-.6 0-1 .4-1 1s.4 1 1 1h5c.6 0 1-.4 1-1s-.4-1-1-1zm-2 4H9c-.6 0-1 .4-1 1s.4 1 1 1h3c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconDownloadSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconDownloadSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 16c-.6 0-1 .4-1 1v1c0 .6-.5 1-1.1 1H7.1c-.6 0-1-.5-1.1-1v-1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 1.7 1.4 3 3 3h9.9c1.7 0 3.1-1.3 3.1-3v-1c0-.6-.4-1-1-1zm-7.7-1.3c.2.2.5.3.7.3s.5-.1.7-.3l5-5c.4-.4.4-1 0-1.4s-1-.4-1.4 0L13 11.6V4c0-.6-.4-1-1-1s-1 .4-1 1v7.6L7.7 8.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l5 5z\\" />
    </svg>
  );
};
"
`;

exports[`IconEditSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconEditSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 19 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20.7 4.1c-1.4-1.4-4-1.4-5.4 0l-11 11c-.1.1-.2.3-.3.5l-1 5c-.1.3 0 .7.3.9.2.2.4.3.7.3h.2l5-1c.2 0 .4-.1.5-.3l11-11c1.5-1.5 1.5-3.9 0-5.4zM8.5 18.9l-3.2.6.6-3.2 8.6-8.6 2.6 2.6-8.6 8.6zM19.3 8.1l-.8.8-2.6-2.6.8-.8c.7-.7 1.9-.7 2.6 0 .7.7.7 1.9 0 2.6z\\" />
    </svg>
  );
};
"
`;

exports[`IconEducationSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconEducationSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 2H7C5.3 2 4 3.3 4 5v14c0 1.7 1.3 3 3 3h12c.6 0 1-.4 1-1V3c0-.6-.4-1-1-1zM7 4h11v12H7c-.4 0-.7.1-1 .2V5c0-.6.4-1 1-1zm11 16H7c-.6 0-1-.4-1-1s.4-1 1-1h11v2z\\" />
    </svg>
  );
};
"
`;

exports[`IconFilterSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconFilterSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M6 9.2V5c0-.6-.4-1-1-1s-1 .4-1 1v4.2c-1.2.4-2 1.5-2 2.8 0 1.3.9 2.4 2 2.8V19c0 .6.4 1 1 1s1-.4 1-1v-4.2c1.2-.4 2-1.5 2-2.8 0-1.3-.8-2.4-2-2.8zM5 13c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1zm8 1.2V5c0-.6-.4-1-1-1s-1 .4-1 1v9.2c-1.2.4-2 1.5-2 2.8 0 1.7 1.3 3 3 3s3-1.3 3-3c0-1.3-.9-2.4-2-2.8zM12 18c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1zM22 7c0-1.7-1.3-3-3-3s-3 1.3-3 3c0 1.3.9 2.4 2 2.8V19c0 .6.4 1 1 1s1-.4 1-1V9.8c1.1-.4 2-1.5 2-2.8zm-3 1c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z\\" />
    </svg>
  );
};
"
`;

exports[`IconGridSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconGridSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M8 3H6C4.3 3 3 4.3 3 6v2c0 1.7 1.3 3 3 3h2c1.7 0 3-1.3 3-3V6c0-1.7-1.3-3-3-3zm1 5c0 .6-.4 1-1 1H6c-.6 0-1-.4-1-1V6c0-.6.4-1 1-1h2c.6 0 1 .4 1 1v2zm-1 5H6c-1.7 0-3 1.3-3 3v2c0 1.7 1.3 3 3 3h2c1.7 0 3-1.3 3-3v-2c0-1.7-1.3-3-3-3zm1 5c0 .6-.4 1-1 1H6c-.6 0-1-.4-1-1v-2c0-.6.4-1 1-1h2c.6 0 1 .4 1 1v2zm9-15h-2c-1.7 0-3 1.3-3 3v2c0 1.7 1.3 3 3 3h2c1.7 0 3-1.3 3-3V6c0-1.7-1.3-3-3-3zm1 5c0 .6-.4 1-1 1h-2c-.6 0-1-.4-1-1V6c0-.6.4-1 1-1h2c.6 0 1 .4 1 1v2zm-1 5h-2c-1.7 0-3 1.3-3 3v2c0 1.7 1.3 3 3 3h2c1.7 0 3-1.3 3-3v-2c0-1.7-1.3-3-3-3zm1 5c0 .6-.4 1-1 1h-2c-.6 0-1-.4-1-1v-2c0-.6.4-1 1-1h2c.6 0 1 .4 1 1v2z\\" />
    </svg>
  );
};
"
`;

exports[`IconHeartActiveSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconHeartActiveSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M15.7 4c-.1 0-.1 0 0 0-1.4 0-2.7.5-3.7 1.3C11 4.5 9.7 4 8.4 4 5.5 4 3 6.3 3 9.3c0 4 5 8.9 8.6 10.6.1.1.3.1.4.1s.3 0 .4-.1C16 18.2 21 13.3 21 9.3c0-3-2.4-5.3-5.3-5.3z\\" />
    </svg>
  );
};
"
`;

exports[`IconHeartSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconHeartSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M15.7 4c-.1 0-.1 0 0 0-1.4 0-2.7.5-3.7 1.3C11 4.5 9.7 4 8.4 4 5.5 4 3 6.3 3 9.3c0 4 5 8.9 8.6 10.6.1.1.3.1.4.1s.3 0 .4-.1C16 18.2 21 13.3 21 9.3c0-3-2.4-5.3-5.3-5.3zM12 17.9c-3-1.6-7-5.7-7-8.6C5 7.5 6.5 6 8.4 6h.1c1.1 0 2.1.5 2.8 1.4.4.5 1.2.5 1.6 0 .6-.9 1.6-1.4 2.7-1.4C17.5 6 19 7.5 19 9.3c0 2.9-4 7-7 8.6z\\" />
    </svg>
  );
};
"
`;

exports[`IconHelpSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconHelpSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9z\\" />
      <path d=\\"M12.7 16.3c-.4-.4-1.1-.4-1.4 0-.1.1-.2.2-.2.3 0 .1-.1.2-.1.4 0 .3.1.5.3.7.2.2.4.3.7.3s.5-.1.7-.3c.1-.1.2-.2.2-.3 0-.1.1-.2.1-.4s0-.3-.1-.4c0-.1-.1-.2-.2-.3zm.6-10.1c-2-.7-4.3.4-5.1 2.5-.2.5.1 1 .6 1.2.5.2 1.1-.1 1.3-.6.4-1 1.5-1.6 2.6-1.2.8.3 1.3 1 1.3 1.9 0 .5-.3.7-1.3 1.2-.7.3-1.7.8-1.7 1.8 0 .6.4 1 1 1 .5 0 .9-.3 1-.7.1-.1.4-.2.6-.3.9-.4 2.5-1.2 2.5-3-.1-1.7-1.2-3.2-2.8-3.8z\\" />
    </svg>
  );
};
"
`;

exports[`IconHistorySvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconHistorySvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '0 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 6c-.6 0-1 .4-1 1v5c0 .4.2.7.6.9l4 2c.1.1.2.1.4.1.4 0 .7-.2.9-.6.2-.5 0-1.1-.4-1.3L13 11.4V7c0-.6-.4-1-1-1z\\" />
      <path d=\\"M19.1 4.9C15.2 1 8.8 1 4.9 4.9 3.3 6.6 2.3 8.7 2 11H1c-.4 0-.8.2-.9.6-.2.4-.1.8.2 1.1l2 2c.2.2.4.3.7.3s.5-.1.7-.3l2-2c.3-.3.4-.7.2-1.1-.1-.4-.5-.6-.9-.6h-.9c.2-1.8 1-3.4 2.3-4.7 3.1-3.1 8.2-3.1 11.3 0 3.1 3.1 3.1 8.2 0 11.3-3.1 3.1-8.2 3.1-11.3 0-.4-.4-1-.4-1.4 0s-.4 1 0 1.4c1.9 2 4.4 3 7 3 2.6 0 5.1-1 7.1-2.9 3.9-3.9 3.9-10.3 0-14.2z\\" />
    </svg>
  );
};
"
`;

exports[`IconHomeSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconHomeSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20.7 9.2l-8-7c-.4-.3-.9-.3-1.3 0l-8 7c-.3.2-.4.5-.4.8v11c0 .6.4 1 1 1h16c.6 0 1-.4 1-1V10c0-.3-.1-.6-.3-.8zM19 20h-5v-4c0-.6-.4-1-1-1h-2c-.6 0-1 .4-1 1v4H5v-9.5l7-6.1 7 6.1V20z\\" />
    </svg>
  );
};
"
`;

exports[`IconImageSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconImageSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 2H5C3.3 2 2 3.3 2 5v14c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3V5c0-1.7-1.3-3-3-3zM4 5c0-.6.4-1 1-1h14c.6 0 1 .4 1 1v7.6L17.4 10c-.8-.8-2.1-.8-2.8 0l-9.9 9.9c-.4-.1-.7-.5-.7-.9V5zm15 15H7.4l8.6-8.6 4 4V19c0 .6-.4 1-1 1z\\" />
      <circle cx={8} cy={8} r={2} />
    </svg>
  );
};
"
`;

exports[`IconInfoSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconInfoSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9z\\" />
      <path d=\\"M12 11c-.6 0-1 .4-1 1v4c0 .6.4 1 1 1s1-.4 1-1v-4c0-.6-.4-1-1-1zm.9-3.4c0-.1-.1-.1-.1-.2s-.1-.1-.1-.1c-.3-.3-.7-.4-1.1-.2-.1.1-.2.1-.3.2l-.1.1c0 .1-.1.1-.1.2s0 .1-.1.2V8c0 .3.1.5.3.7.1.1.2.2.3.2.1.1.3.1.4.1h.2c.1 0 .1 0 .2-.1.1 0 .1-.1.2-.1l.1-.1c.2-.2.3-.4.3-.7v-.2c0-.1-.1-.1-.1-.2z\\" />
    </svg>
  );
};
"
`;

exports[`IconInvoiceSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconInvoiceSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20 2H4c-.6 0-1 .4-1 1v18c0 .3.2.7.5.9.3.2.7.2 1 0l1.5-.8 1.6.8c.3.1.6.1.9 0l1.6-.8 1.6.8c.3.1.6.1.9 0l1.6-.8 1.6.8c.3.1.6.1.9 0l1.6-.8 1.6.8c-.2.1-.1.1.1.1s.4 0 .5-.1c.3-.2.5-.5.5-.9V3c0-.6-.4-1-1-1zm-1 17.4l-.6-.3c-.3-.1-.6-.1-.9 0l-1.5.8-1.6-.8c-.1-.1-.2-.1-.4-.1s-.3 0-.4.1l-1.6.8-1.6-.8c-.3-.1-.6-.1-.9 0l-1.5.8-1.6-.8c-.3-.1-.6-.1-.9 0l-.5.3V4h14v15.4z\\" />
      <path d=\\"M8 12h8c.6 0 1-.4 1-1s-.4-1-1-1H8c-.6 0-1 .4-1 1s.4 1 1 1zm0-4h8c.6 0 1-.4 1-1s-.4-1-1-1H8c-.6 0-1 .4-1 1s.4 1 1 1zm8 6h-3c-.6 0-1 .4-1 1s.4 1 1 1h3c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconListSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconListSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M9 8h10c.6 0 1-.4 1-1s-.4-1-1-1H9c-.6 0-1 .4-1 1s.4 1 1 1zm10 3H9c-.6 0-1 .4-1 1s.4 1 1 1h10c.6 0 1-.4 1-1s-.4-1-1-1zm0 5H9c-.6 0-1 .4-1 1s.4 1 1 1h10c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
      <circle cx={5} cy={7} r={1} />
      <circle cx={5} cy={12} r={1} />
      <circle cx={5} cy={17} r={1} />
    </svg>
  );
};
"
`;

exports[`IconLocationSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconLocationSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 1C7.6 1 4 4.6 4 9c0 4.1 6.5 12.6 7.2 13.6.2.2.5.4.8.4s.6-.1.8-.4c.7-1 7.2-9.5 7.2-13.6 0-4.4-3.6-8-8-8zm0 19.3c-2.2-3-6-8.8-6-11.3 0-3.3 2.7-6 6-6s6 2.7 6 6c0 2.5-3.8 8.3-6 11.3z\\" />
      <path d=\\"M12 5c-1.7 0-3 1.3-3 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3zm0 4c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z\\" />
    </svg>
  );
};
"
`;

exports[`IconMailSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconMailSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M22 6.8C21.9 5.2 20.6 4 19 4H5C3.4 4 2.1 5.2 2 6.8V17c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3V6.8zM5 6h14c.4 0 .7.2.9.5L12 11.8 4.1 6.5c.2-.3.5-.5.9-.5zm14 12H5c-.6 0-1-.4-1-1V8.9l7.4 5c.2.1.4.2.6.2s.4-.1.6-.2l7.4-5V17c0 .6-.4 1-1 1z\\" />
    </svg>
  );
};
"
`;

exports[`IconMinusSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconMinusSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M18 11H6c-.6 0-1 .4-1 1s.4 1 1 1h12c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconMoneySvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconMoneySvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '7 0 10 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M17 15.5c0-1.6-1.3-4.3-4.9-4.5-3-.2-3.1-2.5-3.1-2.5 0-.7.3-1.3.8-1.7.6-.5 1.4-.8 2.2-.8.8 0 1.6.3 2.2.8.4.4 1.1.3 1.4-.1.4-.4.3-1.1-.1-1.4-.7-.6-1.6-1-2.5-1.2V3c0-.6-.4-1-1-1s-1 .4-1 1v1.1c-.9.2-1.7.5-2.5 1.2C7.6 6.1 7 7.2 7 8.5c0 1.6 1.3 4.3 4.9 4.5 3 .2 3.1 2.5 3.1 2.5 0 .7-.3 1.3-.8 1.7-.6.5-1.4.8-2.2.8-.8 0-1.6-.3-2.2-.8-.4-.4-1.1-.3-1.4.1-.4.4-.3 1.1.1 1.4.7.6 1.6 1 2.5 1.2V21c0 .6.4 1 1 1s1-.4 1-1v-1.1c.9-.2 1.7-.5 2.5-1.2.9-.8 1.5-1.9 1.5-3.2z\\" />
    </svg>
  );
};
"
`;

exports[`IconNewWindowSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconNewWindowSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 17 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 11c-.6 0-1 .4-1 1v5c0 .6-.4 1-1 1H7c-.6 0-1-.4-1-1V7c0-.6.4-1 1-1h5c.6 0 1-.4 1-1s-.4-1-1-1H7C5.3 4 4 5.3 4 7v10c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3v-5c0-.6-.4-1-1-1z\\" />
      <path d=\\"M21 3v-.4l-.1-.1c0-.1-.1-.1-.1-.2 0 0-.1 0-.1-.1-.1 0-.1-.1-.2-.1h-4.3c-.6 0-1 .4-1 1s.4 1 1 1H18l-6.5 7.3c-.4.4-.3 1 .1 1.4.2.2.4.3.7.3.3 0 .6-.1.7-.3l6.3-7V7c0 .6.4 1 1 1s1-.4 1-1L21 3z\\" />
    </svg>
  );
};
"
`;

exports[`IconNoteSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconNoteSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M13 11H8c-.6 0-1 .4-1 1s.4 1 1 1h5c.6 0 1-.4 1-1s-.4-1-1-1zm-2 4H8c-.6 0-1 .4-1 1s.4 1 1 1h3c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
      <path d=\\"M20.9 8.6c-.1-.1-.1-.2-.2-.3l-5-5c-.1-.1-.2-.2-.3-.2-.1-.1-.3-.1-.4-.1H6C4.3 3 3 4.3 3 6v12c0 1.7 1.3 3 3 3h12c1.7 0 3-1.3 3-3V9c0-.1 0-.3-.1-.4zM16 6.4L17.6 8H16V6.4zM18 19H6c-.6 0-1-.4-1-1V6c0-.6.4-1 1-1h8v4c0 .6.4 1 1 1h4v8c0 .6-.4 1-1 1z\\" />
    </svg>
  );
};
"
`;

exports[`IconOverflowSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconOverflowSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '10 0 4 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <circle cx={12} cy={4} r={2} />
      <circle cx={12} cy={20} r={2} />
      <circle cx={12} cy={12} r={2} />
    </svg>
  );
};
"
`;

exports[`IconPeopleSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconPeopleSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M9 15c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4zm0-6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm3 7H6c-1.7 0-3 1.3-3 3 0 .6.4 1 1 1s1-.4 1-1 .4-1 1-1h6c.6 0 1 .4 1 1s.4 1 1 1 1-.4 1-1c0-1.7-1.3-3-3-3zm3-11c1.1 0 2 .9 2 2s-.9 2-2 2h-.4c.2.7.4 1.3.4 2 2.2 0 4-1.8 4-4s-1.8-4-4-4c-1.6 0-3.1 1-3.7 2.5.6.3 1.2.6 1.7 1.1.2-.9 1.1-1.6 2-1.6zm3 7h-3.1c-.1.7-.4 1.4-.7 2H18c.6 0 1 .4 1 1s.4 1 1 1 1-.4 1-1c0-1.7-1.3-3-3-3z\\" />
    </svg>
  );
};
"
`;

exports[`IconPersonAddSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconPersonAddSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M8 13c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4zm0-6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm2 7H6c-2.2 0-4 1.8-4 4 0 .6.4 1 1 1s1-.4 1-1c0-1.1.9-2 2-2h4c1.1 0 2 .9 2 2 0 .6.4 1 1 1s1-.4 1-1c0-2.2-1.8-4-4-4zm11-5h-2V7c0-.6-.4-1-1-1s-1 .4-1 1v2h-2c-.6 0-1 .4-1 1s.4 1 1 1h2v2c0 .6.4 1 1 1s1-.4 1-1v-2h2c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconPersonVerifiedSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconPersonVerifiedSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20.4 4.1l-8-3c-.2-.1-.5-.1-.7 0l-8 3c-.4.1-.7.5-.7.9v7c0 6.5 8.2 10.7 8.6 10.9.1.1.2.1.4.1s.3 0 .4-.1c.4-.2 8.6-4.4 8.6-10.9V5c0-.4-.3-.8-.6-.9zM19 12c0 4.5-5.4 7.9-7 8.9-1.6-.9-7-4.3-7-8.9V5.7l7-2.6 7 2.6V12z\\" />
      <path d=\\"M9.7 11.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l2 2c.2.2.5.3.7.3s.5-.1.7-.3l4-4c.4-.4.4-1 0-1.4s-1-.4-1.4 0L11 12.6l-1.3-1.3z\\" />
    </svg>
  );
};
"
`;

exports[`IconPhoneSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconPhoneSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M18.338 20.999a2.45 2.45 0 01-.292-.017A17.205 17.205 0 013.018 5.954a2.63 2.63 0 01.655-2.047A2.723 2.723 0 015.699 3h3.29a1 1 0 01.894.553l1.694 3.387a1 1 0 01-.062 1.002l-1.33 1.995a14.439 14.439 0 003.754 3.792l1.119-1.119a1.003 1.003 0 011.078-.221l4.235 1.694a1 1 0 01.629.929V18.3a2.723 2.723 0 01-.907 2.026 2.641 2.641 0 01-1.755.672zM5.699 5a.717.717 0 00-.534.24.63.63 0 00-.161.488 15.191 15.191 0 0013.268 13.268.65.65 0 00.489-.161.717.717 0 00.239-.534v-2.613l-2.994-1.197-1.229 1.228a.998.998 0 01-1.236.141 16.495 16.495 0 01-5.402-5.403.998.998 0 01.017-1.082l1.372-2.059L8.37 5z\\" />
    </svg>
  );
};
"
`;

exports[`IconPositiveSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconPositiveSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9z\\" />
      <path d=\\"M15.3 9.3L11 13.6l-1.3-1.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l2 2c.2.2.5.3.7.3s.5-.1.7-.3l5-5c.4-.4.4-1 0-1.4s-1-.4-1.4 0z\\" />
    </svg>
  );
};
"
`;

exports[`IconPrintSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconPrintSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 8h-1V3c0-.6-.4-1-1-1H7c-.6 0-1 .4-1 1v5H5c-1.7 0-3 1.3-3 3v4c0 1.7 1.3 3 3 3v3c0 .6.4 1 1 1h12c.6 0 1-.4 1-1v-3c1.7 0 3-1.3 3-3v-4c0-1.7-1.3-3-3-3zM8 4h8v4H8V4zm9 16H7v-4h10v4zm3-5c0 .6-.4 1-1 1v-1c0-.6-.4-1-1-1H6c-.6 0-1 .4-1 1v1c-.6 0-1-.4-1-1v-4c0-.6.4-1 1-1h14c.6 0 1 .4 1 1v4z\\" />
    </svg>
  );
};
"
`;

exports[`IconProfileSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconProfileSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 14c2.8 0 5-2.2 5-5s-2.2-5-5-5-5 2.2-5 5 2.2 5 5 5zm0-8c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm3 9H9c-2.2 0-4 1.8-4 4 0 .6.4 1 1 1s1-.4 1-1c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2 0 .6.4 1 1 1s1-.4 1-1c0-2.2-1.8-4-4-4z\\" />
    </svg>
  );
};
"
`;

exports[`IconPromoteSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconPromoteSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M6 10h1c.6 0 1-.4 1-1s-.4-1-1-1H6V7c0-.6-.4-1-1-1s-1 .4-1 1v1H3c-.6 0-1 .4-1 1s.4 1 1 1h1v1c0 .6.4 1 1 1s1-.4 1-1v-1zm5 8h-1v-1c0-.6-.4-1-1-1s-1 .4-1 1v1H7c-.6 0-1 .4-1 1s.4 1 1 1h1v1c0 .6.4 1 1 1s1-.4 1-1v-1h1c.6 0 1-.4 1-1s-.4-1-1-1zm10-7c-2.2 0-4-3.2-4-7 0-.6-.4-1-1-1s-1 .4-1 1c0 3.8-1.8 7-4 7-.6 0-1 .4-1 1s.4 1 1 1c2.2 0 4 3.2 4 7 0 .6.4 1 1 1s1-.4 1-1c0-3.8 1.8-7 4-7 .6 0 1-.4 1-1s-.4-1-1-1zm-5 4c-.6-1.3-1.3-2.3-2.2-3 .9-.7 1.7-1.7 2.2-3 .6 1.3 1.3 2.3 2.2 3-.9.7-1.6 1.7-2.2 3z\\" />
    </svg>
  );
};
"
`;

exports[`IconRecommendedSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconRecommendedSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19 8c0-3.9-3.1-7-7-7S5 4.1 5 8c0 2 .8 3.8 2.2 5.1L6 21.9c-.1.4.1.8.4 1 .3.2.7.2 1.1 0l4.5-2.7 4.5 2.7c.1.1.3.1.5.1s.4-.1.5-.2c.3-.2.5-.6.4-1L16.7 13c1.5-1.2 2.3-3 2.3-5zM7 8c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5zm8.7 12.1l-3.2-1.9c-.3-.2-.7-.2-1 0l-3.2 1.9.7-5.8c.9.4 1.9.7 3 .7s2.1-.2 3-.7l.7 5.8z\\" />
    </svg>
  );
};
"
`;

exports[`IconRefreshSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconRefreshSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M23.607 10.29a1 1 0 00-1.414 0l-.304.304A9.995 9.995 0 1012 22a1 1 0 000-2 8 8 0 117.86-9.457l-.253-.253a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l2-2a1 1 0 000-1.414z\\" />
    </svg>
  );
};
"
`;

exports[`IconResumeSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconResumeSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M17 2H7C5.3 2 4 3.3 4 5v14c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V5c0-1.7-1.3-3-3-3zm1 17c0 .6-.4 1-1 1H7c-.6 0-1-.4-1-1V5c0-.6.4-1 1-1h10c.6 0 1 .4 1 1v14z\\" />
      <circle cx={10} cy={8} r={2} />
      <path d=\\"M15 12H9c-.6 0-1 .4-1 1s.4 1 1 1h6c.6 0 1-.4 1-1s-.4-1-1-1zm-2 4H9c-.6 0-1 .4-1 1s.4 1 1 1h4c.6 0 1-.4 1-1s-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconSearchSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSearchSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M21.7 20.3L18 16.6c1.2-1.5 2-3.5 2-5.6 0-5-4-9-9-9s-9 4-9 9 4 9 9 9c2.1 0 4.1-.7 5.6-2l3.7 3.7c.2.2.5.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4zM4 11c0-3.9 3.1-7 7-7s7 3.1 7 7c0 1.9-.8 3.7-2 4.9-1.3 1.3-3 2-4.9 2-4 .1-7.1-3-7.1-6.9z\\" />
    </svg>
  );
};
"
`;

exports[`IconSecuritySvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSecuritySvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M17 10V7c0-2.8-2.2-5-5-5S7 4.2 7 7v3c-1.7 0-3 1.3-3 3v6c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3v-6c0-1.7-1.3-3-3-3zM9 7c0-1.7 1.3-3 3-3s3 1.3 3 3v3H9V7zm9 12c0 .6-.4 1-1 1H7c-.6 0-1-.4-1-1v-6c0-.6.4-1 1-1h10c.6 0 1 .4 1 1v6z\\" />
    </svg>
  );
};
"
`;

exports[`IconSendSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSendSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 21 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M22 3c0-.1 0-.2-.1-.3v-.1c0-.1-.1-.2-.2-.3-.1-.1-.2-.1-.3-.2h-.1c-.1-.1-.2-.1-.3-.1h-.3l-19 6c-.4.2-.6.5-.7.9 0 .4.1.8.5 1l7.8 4.9 4.9 7.8c.2.3.5.5.8.5h.1c.4 0 .7-.3.8-.7l6-19c.1-.2.1-.3.1-.4zm-4.6 2.2l-7.5 7.5-5.5-3.4 13-4.1zm-2.7 14.4l-3.4-5.5 7.5-7.5-4.1 13z\\" />
    </svg>
  );
};
"
`;

exports[`IconSentSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSentSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M13 8.2V6.4c0-1.1-.9-2-2-2-.5 0-1 .2-1.4.6l-6.3 6.3c-.4.4-.4 1 0 1.4L9.6 19c.8.8 2 .8 2.8 0 .4-.4.6-.9.6-1.4v-1.7c2.5 0 4.9 1.3 6.1 3.6.2.3.5.5.9.5h.2c.4-.1.8-.5.8-1 0-3.3-1.7-9.5-8-10.8zM11.9 14c-.5.1-.9.5-.9 1v2.6L5.4 12 11 6.4V9c0 .5.4.9.9 1 4.1.5 5.8 3.4 6.6 5.7-1.9-1.4-4.3-2-6.6-1.7z\\" />
    </svg>
  );
};
"
`;

exports[`IconSettingsSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSettingsSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M21.3 13.3l-.2-.2c-.5-.7-.5-1.5 0-2.2l.2-.2c.6-.8.9-1.7.8-2.7-.2-2.1-2.1-3.6-4.2-3.4h-.3c-.8.1-1.6-.3-1.9-1.1l-.1-.3c-.4-.9-1.1-1.6-2-2-.9-.4-2-.4-2.9-.1-1 .4-1.7 1.1-2.1 2l-.2.4c-.3.8-1.1 1.2-1.9 1.1h-.3c-1-.1-1.9.2-2.7.7-1.6 1.3-2 3.7-.8 5.4l.2.2c.5.6.5 1.5 0 2.2l-.2.2c-.5.8-.8 1.7-.7 2.7.1 1 .6 1.9 1.4 2.6.8.6 1.8.9 2.8.8h.3c.8-.1 1.6.3 1.9 1.1l.1.3c.4.9 1.1 1.6 2 2 .5.2 1 .3 1.5.3s.9-.1 1.4-.3c1-.4 1.7-1.1 2.1-2l.1-.3c.3-.7 1.1-1.2 1.9-1.1h.3c.9.1 1.9-.2 2.7-.7.8-.6 1.4-1.5 1.5-2.5.2-1 0-2.1-.7-2.9zm-1.2 2.6c-.1.5-.3.9-.7 1.2-.4.3-.8.4-1.3.3h-.3c-1.7-.2-3.2.7-3.9 2.3l-.1.3c-.2.5-.6.8-1 1-.5.2-1 .2-1.4 0-.4-.2-.8-.5-.9-.9l-.1-.3c-.6-1.4-2-2.3-3.5-2.3h-.7c-.5.1-1-.1-1.4-.4-.4-.3-.6-.7-.7-1.2 0-.5.1-.9.3-1.3l.2-.2c1-1.4 1-3.2 0-4.5l-.2-.4c-.3-.4-.4-.9-.4-1.4.1-.5.3-.9.7-1.2.4-.2.9-.4 1.3-.3h.3c1.7.2 3.3-.7 4-2.2l.1-.3c.2-.4.6-.8 1-1 .5-.2 1-.2 1.4 0 .4.2.8.5.9.9l.1.3c.7 1.5 2.3 2.4 3.9 2.3h.3c1-.1 1.9.6 2 1.6 0 .5-.1.9-.3 1.3l-.2.2c-1 1.4-1 3.2 0 4.5l.2.2c.3.5.4 1 .4 1.5z\\" />
      <path d=\\"M12 8c-2.2 0-4 1.8-4 4s1.8 4 4 4 4-1.8 4-4-1.7-4-4-4zm0 6c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.8 2-2 2z\\" />
    </svg>
  );
};
"
`;

exports[`IconShareSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconShareSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20.7 11.3L14.4 5c-.4-.4-.9-.6-1.4-.6-1.1 0-2 .9-2 2v1.7C4.7 9.5 3 15.7 3 19c0 .5.3.9.8 1H4c.4 0 .7-.2.9-.5 1.2-2.2 3.6-3.6 6.1-3.6v1.7c0 .5.2 1 .6 1.4.8.8 2 .8 2.8 0l6.3-6.3c.4-.4.4-1 0-1.4zM13 17.6V15c0-.5-.4-.9-.9-1-.4-.1-.8-.1-1.2-.1-1.9 0-3.8.6-5.4 1.8.7-2.4 2.5-5.2 6.6-5.7.5-.1.9-.5.9-1V6.4l5.6 5.6-5.6 5.6z\\" />
    </svg>
  );
};
"
`;

exports[`IconSocialFacebookSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSocialFacebookSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '8 0 8 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M13.227 20v-7.288h2.46l.367-2.853h-2.827V8.042c0-.825.23-1.384 1.413-1.384h1.511V4.111A20.858 20.858 0 0013.958 4a3.424 3.424 0 00-3.656 3.759v2.099H7.85v2.853h2.453V20z\\" />
    </svg>
  );
};
"
`;

exports[`IconSocialGitHubSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSocialGitHubSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 20 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path
        d=\\"M12.006 2a10 10 0 00-3.16 19.489c.5.092.682-.217.682-.482 0-.237-.008-.866-.013-1.7-2.782.603-3.369-1.341-3.369-1.341a2.648 2.648 0 00-1.11-1.463c-.908-.62.068-.608.068-.608a2.1 2.1 0 011.532 1.03 2.13 2.13 0 002.91.831 2.137 2.137 0 01.635-1.336c-2.22-.253-4.555-1.11-4.555-4.943a3.865 3.865 0 011.03-2.683 3.597 3.597 0 01.098-2.647s.84-.269 2.75 1.026a9.478 9.478 0 015.007 0c1.909-1.294 2.747-1.026 2.747-1.026a3.592 3.592 0 01.1 2.647 3.859 3.859 0 011.027 2.683c0 3.842-2.338 4.687-4.566 4.935a2.387 2.387 0 01.68 1.852c0 1.336-.013 2.415-.013 2.743 0 .267.18.578.688.48A10.001 10.001 0 0012.006 2z\\"
        fillRule=\\"evenodd\\"
      />
    </svg>
  );
};
"
`;

exports[`IconSocialInstagramSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSocialInstagramSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M12 5.441c2.136 0 2.39.009 3.233.047a4.426 4.426 0 011.485.276 2.65 2.65 0 011.518 1.518 4.427 4.427 0 01.276 1.485c.038.844.047 1.097.047 3.233s-.009 2.39-.047 3.233a4.427 4.427 0 01-.276 1.485 2.65 2.65 0 01-1.518 1.518 4.427 4.427 0 01-1.485.276c-.844.038-1.097.047-3.233.047s-2.39-.009-3.233-.047a4.427 4.427 0 01-1.485-.276 2.65 2.65 0 01-1.518-1.518 4.426 4.426 0 01-.276-1.485c-.038-.844-.047-1.097-.047-3.233s.009-2.39.047-3.233a4.426 4.426 0 01.276-1.485 2.65 2.65 0 011.518-1.518 4.426 4.426 0 011.485-.276c.844-.038 1.097-.047 3.233-.047M12 4c-2.173 0-2.445.01-3.298.048a5.872 5.872 0 00-1.942.372 4.09 4.09 0 00-2.34 2.34 5.872 5.872 0 00-.372 1.942C4.01 9.555 4 9.827 4 12s.01 2.445.048 3.298a5.872 5.872 0 00.372 1.942 4.09 4.09 0 002.34 2.34 5.872 5.872 0 001.942.372C9.555 19.99 9.827 20 12 20s2.445-.01 3.298-.048a5.872 5.872 0 001.942-.372 4.09 4.09 0 002.34-2.34 5.872 5.872 0 00.372-1.942C19.99 14.445 20 14.173 20 12s-.01-2.445-.048-3.298a5.872 5.872 0 00-.372-1.942 4.09 4.09 0 00-2.34-2.34 5.872 5.872 0 00-1.942-.372C14.445 4.01 14.173 4 12 4z\\" />
      <path d=\\"M12 7.892A4.108 4.108 0 1016.108 12 4.108 4.108 0 0012 7.892zm0 6.775A2.667 2.667 0 1114.667 12 2.667 2.667 0 0112 14.667z\\" />
      <circle cx={16.27} cy={7.73} r={0.96} />
    </svg>
  );
};
"
`;

exports[`IconSocialLinkedInSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSocialLinkedInSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M8.134 18.987H5.23V9.653h2.904zm-1.45-10.61a1.682 1.682 0 111.68-1.682 1.682 1.682 0 01-1.68 1.683zM19 18.988h-2.9v-4.54c0-1.082-.02-2.474-1.508-2.474-1.51 0-1.74 1.18-1.74 2.397v4.617H9.954V9.653h2.781v1.276h.04a3.047 3.047 0 012.745-1.508c2.937 0 3.48 1.933 3.48 4.447z\\" />
    </svg>
  );
};
"
`;

exports[`IconSocialMediumSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSocialMediumSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M21 21H3V3h18zM7.295 14.365a.615.615 0 01-.163.53l-1.27 1.54v.204h3.601v-.203l-1.27-1.54a.638.638 0 01-.175-.531V9.742l3.161 6.897h.367l2.716-6.897v5.497c0 .147 0 .175-.096.271l-.977.948v.204h4.742v-.204l-.943-.925a.282.282 0 01-.107-.271v-6.8a.282.282 0 01.107-.272l.966-.925v-.203h-3.342l-2.383 5.942-2.71-5.942H6.015v.203l1.129 1.36a.468.468 0 01.152.395z\\" />
    </svg>
  );
};
"
`;

exports[`IconSocialTwitterSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSocialTwitterSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M9.403 17.689a8.117 8.117 0 008.172-8.172 7.64 7.64 0 00-.008-.372A5.844 5.844 0 0019 7.658a5.734 5.734 0 01-1.65.452 2.882 2.882 0 001.263-1.589 5.756 5.756 0 01-1.823.698 2.875 2.875 0 00-4.895 2.619 8.155 8.155 0 01-5.92-3 2.875 2.875 0 00.889 3.834 2.851 2.851 0 01-1.301-.36l-.001.037a2.874 2.874 0 002.304 2.816 2.868 2.868 0 01-1.297.05 2.876 2.876 0 002.684 1.994 5.764 5.764 0 01-3.568 1.23 5.847 5.847 0 01-.685-.04 8.132 8.132 0 004.403 1.29\\" />
    </svg>
  );
};
"
`;

exports[`IconStarActiveSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconStarActiveSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M23 9c-.1-.4-.4-.6-.8-.7l-6.4-.9-2.9-5.8c-.3-.5-.9-.7-1.4-.4-.2.1-.3.2-.4.4L8.2 7.3l-6.3 1c-.6.1-1 .6-.9 1.1 0 .2.1.4.3.6l4.6 4.5-1.1 6.4c-.1.5.3 1.1.8 1.2.2 0 .4 0 .6-.1l5.7-3 5.7 3c.5.3 1.1.1 1.3-.4.1-.2.1-.4.1-.6l-1.1-6.4 4.6-4.5c.5-.4.6-.8.5-1.1z\\" />
    </svg>
  );
};
"
`;

exports[`IconStarSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconStarSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M23 9c-.1-.4-.4-.6-.8-.7l-6.4-.9-2.9-5.8c-.3-.7-1.5-.7-1.8 0L8.2 7.3l-6.3 1c-.4 0-.7.3-.9.7-.1.4 0 .8.3 1l4.6 4.5-1.1 6.4c-.1.4.1.8.4 1 .2 0 .4.1.6.1.2 0 .3 0 .5-.1l5.7-3 5.7 3c.3.2.7.1 1.1-.1.3-.2.5-.6.4-1l-1.1-6.4 4.6-4.5c.3-.2.4-.6.3-.9zm-6.7 4.4c-.2.2-.3.6-.3.9l.8 4.9-4.4-2.3c-.3-.2-.6-.2-.9 0l-4.4 2.3.9-4.9c0-.3-.1-.7-.3-.9L4.1 10 9 9.3c.3 0 .6-.3.8-.5L12 4.3l2.2 4.4c.1.3.4.5.8.5l4.9.7-3.6 3.5z\\" />
    </svg>
  );
};
"
`;

exports[`IconStatisticsSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconStatisticsSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '3 0 18 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20 20H4a1 1 0 010-2h16a1 1 0 010 2zM4 16a1 1 0 01-.707-1.707l5-5a1 1 0 011.414 0L12 11.586l7.293-7.293a1 1 0 011.414 1.414l-8 8a1 1 0 01-1.414 0L9 11.414l-4.293 4.293A.997.997 0 014 16z\\" />
      <path d=\\"M20 20H4a1 1 0 010-2h16a1 1 0 010 2zM4 16a1 1 0 01-.707-1.707l5-5a1 1 0 011.414 0L12 11.586l7.293-7.293a1 1 0 011.414 1.414l-8 8a1 1 0 01-1.414 0L9 11.414l-4.293 4.293A.997.997 0 014 16z\\" />
    </svg>
  );
};
"
`;

exports[`IconSubCategorySvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconSubCategorySvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M18.7 14.3l-3-3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l1.3 1.3H8c-.6 0-1-.4-1-1V6c0-.6-.4-1-1-1s-1 .4-1 1v7c0 1.7 1.3 3 3 3h7.6l-1.3 1.3c-.4.4-.4 1 0 1.4.2.2.5.3.7.3s.5-.1.7-.3l3-3c.4-.4.4-1 0-1.4z\\" />
    </svg>
  );
};
"
`;

exports[`IconTagSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconTagSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '2 0 21 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M7.4 6.1c-.3-.1-.5-.1-.8 0-.1 0-.2.1-.3.2-.1.1-.2.2-.2.3-.1.1-.1.3-.1.4 0 .1 0 .3.1.4.1.1.1.2.2.3.2.2.4.3.7.3.3 0 .5-.1.7-.3.2-.2.3-.4.3-.7 0-.3-.1-.5-.3-.7-.1-.1-.2-.2-.3-.2z\\" />
      <path d=\\"M22.1 10.9l-8.6-8.6c-.2-.2-.4-.3-.7-.3h-8c-1.7 0-3 1.3-3 3v8c0 .3.1.5.3.7l8.6 8.6c.6.6 1.4.9 2.1.9.8 0 1.5-.3 2.1-.9l7.1-7.1.1-.1c1.2-1.2 1.2-3.1 0-4.2zm-1.3 2.7s-.1.1 0 0l-7.3 7.3c-.4.4-1 .4-1.4 0l-8.3-8.3V5c0-.6.4-1 1-1h7.6l8.3 8.3c.4.4.4.9.1 1.3z\\" />
    </svg>
  );
};
"
`;

exports[`IconTickSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconTickSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M19.7 6.3c-.4-.4-1-.4-1.4 0L9 15.6l-3.3-3.3c-.4-.4-1-.4-1.4 0s-.4 1 0 1.4l4 4c.2.2.4.3.7.3s.5-.1.7-.3l10-10c.4-.4.4-1 0-1.4z\\" />
    </svg>
  );
};
"
`;

exports[`IconTimeSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconTimeSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M16.4 13.1L13 11.4V6c0-.6-.4-1-1-1s-1 .4-1 1v6c0 .4.2.7.6.9l4 2c.1.1.2.1.4.1.4 0 .7-.2.9-.6.2-.4 0-1-.5-1.3z\\" />
      <path d=\\"M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm0 20c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9z\\" />
    </svg>
  );
};
"
`;

exports[`IconUploadSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconUploadSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '4 0 16 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M7.7 9.7L11 6.4V14c0 .6.4 1 1 1s1-.4 1-1V6.4l3.3 3.3c.2.2.4.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4l-5-5c-.4-.4-1-.4-1.4 0l-5 5c-.4.4-.4 1 0 1.4s1 .4 1.4 0zM19 16c-.6 0-1 .4-1 1v1c0 .6-.5 1-1.1 1H7.1c-.6 0-1-.5-1.1-1v-1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 1.7 1.4 3 3 3h9.9c1.7 0 3.1-1.3 3.1-3v-1c0-.6-.4-1-1-1z\\" />
    </svg>
  );
};
"
`;

exports[`IconVideoSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconVideoSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '5 0 14 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M18.4 11.1l-12-6c-.3-.1-.6-.1-.9 0-.3.2-.5.6-.5.9v12c0 .3.2.7.5.9.1.1.3.1.5.1s.3 0 .4-.1l12-6c.3-.2.6-.5.6-.9s-.2-.7-.6-.9zM7 16.4V7.6l8.8 4.4L7 16.4z\\" />
    </svg>
  );
};
"
`;

exports[`IconWorkExperienceSvg should match snapshot 1`] = `
"import React from 'react';

import { SVGProps } from '../SVGTypes';

export const IconWorkExperienceSvg = ({
  title,
  titleId,
  crop,
  ...restProps
}: SVGProps) => {
  const props = crop
    ? {
        viewBox: '1 0 22 24',
        ...restProps,
      }
    : restProps;

  return (
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      fill=\\"currentColor\\"
      role=\\"img\\"
      height=\\"100%\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M20 6h-3V5a3.003 3.003 0 00-3-3h-4a3.003 3.003 0 00-3 3v1H4a3.003 3.003 0 00-3 3v10a3.003 3.003 0 003 3h16a3.003 3.003 0 003-3V9a3.003 3.003 0 00-3-3zM9 5a1 1 0 011-1h4a1 1 0 011 1v1H9zm6 3v12H9V8zM3 19V9a1 1 0 011-1h3v12H4a1 1 0 01-1-1zm18 0a1 1 0 01-1 1h-3V8h3a1 1 0 011 1z\\" />
    </svg>
  );
};
"
`;
